--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@cloudnative/health-connect": "^2.1.0",
+    "appmetrics-prometheus": "^3.1.0",
     "bunyan": "^1.8.12",
     "express": "^4.16.4",
     "nodemon": "^2.0.4"
