--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@cloudnative/health-connect": "^2.1.0",
     "appmetrics-prometheus": "^3.1.0",
+    "appmetrics-zipkin": "^1.1.1",
     "bunyan": "^1.8.12",
     "express": "^4.16.4",
     "nodemon": "^2.0.4"
